traefik/manual/ingressroutes.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"dashboard","namespace":"traefik"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`traefik.pangarabbit.com`)","services":[{"kind":"TraefikService","name":"api@internal"}]}]}}
    creationTimestamp: "2024-07-18T13:51:58Z"
    generation: 1
    name: dashboard
    namespace: traefik
    resourceVersion: "12686"
    uid: 2c82288f-90bc-4ff0-a390-e780c1fb25a4
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`traefik.pangarabbit.com`)
      services:
      - kind: TraefikService
        name: api@internal
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      meta.helm.sh/release-name: traefik
      meta.helm.sh/release-namespace: traefik
    creationTimestamp: "2024-07-18T13:44:28Z"
    generation: 1
    labels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: traefik
      helm.sh/chart: traefik-29.0.1
    name: traefik-dashboard
    namespace: traefik
    resourceVersion: "11518"
    uid: 010515d8-e9c5-451a-9451-12d37bb36c8c
  spec:
    entryPoints:
    - traefik
    routes:
    - kind: Rule
      match: Host(`traefik.pangarabbit.com`)
      services:
      - kind: TraefikService
        name: api@internal
kind: List
metadata:
  resourceVersion: ""
